src/test/ui/feature-gate-link_llvm_intrinsics.stderr
error[E0658]: linking to LLVM intrinsics is experimental (see issue #29602)
  --> $DIR/feature-gate-link_llvm_intrinsics.rs:13:5
   |
13 |     fn sqrt(x: f32) -> f32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(link_llvm_intrinsics)] to the crate attributes to enable

error: aborting due to previous error

